--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" rows="5" required></textarea><br><br>
 
-        <input type="submit" id="Send" />
+        <!-- <input type="submit" id="Send" /> -->
+
+        <button class="button" type="submit" id="Send">
+            <div class="container">
+                <div class="tick">
+                </div>
+            </div>
+        </button>
     </form>
     <script src="script.js"></script>
 </body>
